--- a/portfolio.html
+++ b/portfolio.html
@@ -12,25 +12,39 @@
     
 </head>
 <body>
-  <header class="glav-hader">
+  <header>
     <div class="container">            
-      <div class="page-hader">
-          <nav class="nav">       
-              <a href="" class="logo-top"><span class="logo-web">Web</span>Studio<span></span> </a>
-                <!-- Main navigation -->         
-              <ul class="site-nav">
-                <li class=site-nav-link><a href="./index.html" class="link">Студия</a></li>
-                <li class=site-nav-link><a href="" class="link current-link">Портфолио</a></li>
-                <li class=site-nav-link-last><a href="" class="link">Контакты</a></li>
-              </ul>
-          </nav>
-                <!-- Ссылка на адрес электронной почты и телефон -->
-              <ul class="page-contacts">
-                <li class=item><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class=item-last><a href="+38 096 111 11 11" class="link">+38 096 111 11 11</a></li>
-              </ul>         
-      </div>
-    </div>    
+          <div class="page-hader">
+              <nav class="nav">       
+                  <a href="" class="logo-top"><span class="logo-web">Web</span>Studio<span></span> </a>
+                  <!-- Main navigation -->         
+                  <ul class="site-nav">
+                  <li class=site-nav-link><a href="/index.html" class="link">Студия</a></li>
+                  <li class=site-nav-link><a href="" class="link current-link">Портфолио</a></li>
+                  <li class=site-nav-link><a href="" class="link">Контакты</a></li>
+                  </ul>
+              </nav>
+                  <!-- Ссылка на адрес электронной почты и телефон -->
+                  <ul class="page-contacts">
+                  <li class="contacts-top-item">
+                    <a href="info@devstudio.com" class="contacts-top-link email">
+                      <svg class="email-icon" width="16px" height="12px">
+                        <use href="./img/sprite.svg#email"></use>
+                      </svg>
+                      info@devstudio.com
+                    </a>
+                  </li>
+                  <li class="contacts-top-item">
+                    <a href="+38 096 111 11 11" class="contacts-top-link phone">
+                      <svg class="phone-icon" width="10px" height="16px">
+                        <use href="./img/sprite.svg#phone"></use>
+                      </svg>
+                      +38 096 111 11 11
+                    </a>
+                  </li>
+                  </ul>         
+          </div>
+    </div>
 </header>
 
       <main>
@@ -113,11 +127,53 @@
           </section>
         </div>  
       </main>
-      <footer class="end">
+      <footer>
         <div class="container">
-            <a href="" class="logo-end"><span class="logo-web">Web</span>Studio<span></span> </a>
-            <address class="adress-end">г. Киев, пр-т Леси Украинки, 26</address>
-            <address class="contacts-end">info@devstudio.com </br>+38 096 111 11 11 </address>  
+          <div class="footer-conteiner">
+            <div class="footer-block">
+              <a href="" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+              <address>г. Киев, пр-т Леси Украинки, 26</address>
+              <ul class="contacts-footer">
+                <li class="contacts-footer item">
+                  <a href="mailto:info@devstudio.com" class="contacts-footer link">info@devstudio.com</a>
+                </li>
+                <li class="contacts-footer item">
+                  <a href="tel:+380961111111" class="contacts-footer link">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </div>
+  
+            <div class="footer-block">
+              <p class="join-us">присоединяйтесь</p>
+              <ul class="footer-media">
+                <li class="footer-media-item">
+                  <a class="footer-media-link" href=""><svg class="footer-media-svg">
+                      <use href="./img/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-media-item">
+                  <a class="footer-media-link" href=""><svg class="footer-media-svg">
+                      <use href="./img/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-media-item">
+                  <a class="footer-media-link" href=""><svg class="footer-media-svg">
+                      <use href="./img/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-media-item">
+                  <a class="footer-media-link" href=""><svg class="footer-media-svg">
+                      <use href="./img/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+           
         </div>
     </footer>
 </body>
