--- a/portfolio.html
+++ b/portfolio.html
@@ -63,64 +63,82 @@
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Технокряк.jpg" alt="Технокряк"></img>
-                      <h3>Технокряк</h3>
-                      <p class="team-content">Веб-сайт</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Технокряк</h3>
+                        <p class="work-list-content">Веб-сайт</p> 
+                      </div>                       
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Баскетбол.jpg" alt="Баскетбол"></img>
-                      <h3>Постер New Orlean vs Golden Star</h3>
-                      <p class="team-content">Дизайн</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Постер New Orlean vs Golden Star</h3>
+                        <p class="work-list-content">Дизайн</p> 
+                      </div>                       
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Сифуд.jpg" alt="Сифуд"></img>
-                      <h3>Ресторан Seafood</h3>
-                      <p class="team-content">Приложение</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Ресторан Seafood</h3>
+                        <p class="work-list-content">Приложение</p>
+                      </div>                       
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Навушники.jpg" alt="Навушники"></img>
-                      <h3>Проект Prime</h3>
-                      <p class="team-content">Маркетинг</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Проект Prime</h3>
+                        <p class="work-list-content">Маркетинг</p>
+                      </div>                        
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Коробки.jpg" alt="Коробки"></img>
-                      <h3>Проект Boxes</h3>
-                      <p class="team-content">Приложение</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Проект Boxes</h3>
+                        <p class="work-list-content">Приложение</p>  
+                      </div>                      
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Монитор.jpg" alt="Монитор"></img>
-                      <h3>Inspiration has no Borders</h3>
-                      <p class="team-content">Веб-сайт</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Inspiration has no Borders</h3>
+                        <p class="work-list-content">Веб-сайт</p> 
+                      </div>                       
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Журнал.jpg" alt="Журнал"></img>
-                      <h3>Издание Limited Edition</h3>
-                      <p class="team-content">Дизайн</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Издание Limited Edition</h3>
+                        <p class="work-list-content">Дизайн</p> 
+                      </div>                       
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Лейба.jpg" alt="Лейба"></img>
-                      <h3>Проект LAB</h3>
-                      <p class="team-content">Маркетинг</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Проект LAB</h3>
+                        <p class="work-list-content">Маркетинг</p> 
+                      </div>                       
                     </a>
                 </li>
                 <li class="work-list-item">
                     <a href="">
                       <img src="./img/Ноут.jpg" alt="Ноут"></img>
-                      <h3>Growing Business</h3>
-                      <p class="team-content">Приложение</p>                        
+                      <div class="work-card">
+                        <h3 class="work-list-title">Growing Business</h3>
+                        <p class="work-list-content">Приложение</p> 
+                      </div>                       
                     </a>
                 </li>
             </ul>
