--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!--Команда-->
         <section class="our-team">
             <div class="container">
-                <h2 class="team title">Наша команда</h2>
+                <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-list-item">
                     <img src="./img/imgДемьяненко.jpg" alt="Демьяненко">
