--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-  <header>
+  <header class="line">
     <div class="container">            
           <div class="page-hader">
               <nav class="nav">       
@@ -62,7 +62,12 @@
             <ul class="works-list">
                 <li class="work-list-item">
                     <a href="">
-                      <img src="./img/Технокряк.jpg" alt="Технокряк"></img>
+                      <div class="box">                                        
+                        <img src="./img/Технокряк.jpg" alt="Технокряк"></img>
+                        <div class="overlay">
+                        <p class="overlay-text">вставити текст
+                        </div>
+                      </div> 
                       <div class="work-card">
                         <h3 class="work-list-title">Технокряк</h3>
                         <p class="work-list-content">Веб-сайт</p> 
