--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="page-header__contacts-item">
             <a href="tel:+38 096 111 11 11" class="page-header__contacts-link">
               <svg class="page-header__contacts-icon page-header__contacts-icon--phone" width="10px" height="16px">
-                <use href="./img/sprite.svg#phone"></use>
+                <use href="../school/img/sprite.svg#phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
